Minor alignment issues

--- a/src/app/home/header/header.component.css
+++ b/src/app/home/header/header.component.css
@@ -55,20 +55,23 @@ nav form .checkbox label input{
 }
 .error{
     transition: opacity .5s ease-out;
-    opacity: 0; 
+    opacity: 0;
     height: 0;
     overflow: hidden;
     position: absolute;
-    top: 3.2em;
-    right: 2em;
     background: rgba(0,0,0,.9);
     vertical-align: middle;
-    padding: 1em;
-    z-index: 5;
+    padding: 1em 0;
+    z-index: 5555;
     color: red;
     font-weight: 700;
-    font-size: 1.2em;
+    font-size: 1.1em;
     border-radius: .5em;
+    top: 0;
+    left: 50%;
+    width: 320px;
+    text-align:center;
+    transform: translateX(-50%);
 }
 .error p{
     margin: 0;
